Add backend support for dated labels.
